Fix wrapping of blind key and access to material icons.

--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -9,9 +9,9 @@ body {
   src: url(/assets/material-icons/iconfont/MaterialIcons-Regular.eot); /* For IE6-8 */
   src: local('Material Icons'),
        local('MaterialIcons-Regular'),
-       url(/assets/material-icons/iconfont/MaterialIcons-Regular.woff2) format('woff2'),
-       url(/assets/material-icons/iconfont/MaterialIcons-Regular.woff) format('woff'),
-       url(/assets/material-icons/iconfont/MaterialIcons-Regular.ttf) format('truetype');
+       url(/assets/material-icons/iconfont/material-icons.woff2) format('woff2'),
+       url(/assets/material-icons/iconfont/material-icons.woff) format('woff'),
+       url(/assets/material-icons/iconfont/material-icons.ttf) format('truetype');
 }
 .material-icons {
   font-family: 'Material Icons';
@@ -32,4 +32,6 @@ body {
   /* Support for Firefox. */
   -moz-osx-font-smoothing: grayscale;
 }
-
+.nowrap {
+    white-space: nowrap;
+}
